[package]
authors = ["elias <maierelias13@gmail.com>"]
categories = ["wasm"]
edition = "2018"
name = "cardioid-times-table"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = ['CanvasRenderingContext2d']

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
futures = "0.3.16"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.26"
wasm-bindgen-test = "0.3.26"
